--- a/apps/front/i18n/fr.json
+++ b/apps/front/i18n/fr.json
@@ -388,9 +388,7 @@
       "button_submit": "Valider",
       "read_our": "Lire notre",
       "moderation_link": "charte de modération",
-      "button_propose": "PROPOSER",
-      "mandatory_field": "Tous les champs sont obligatoires.",
-      "proposal": "Votre proposition :"
+      "button_propose": "PROPOSER"
     },
     "authentication": {
       "button_back": "Modifier ma proposition",
