--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -158,7 +158,7 @@
         "submit_success": "Edits saved.",
         "malformed": "Please use the right url format \"https://example.com\""
       },
-      "requirements_short": "@@common.form.requirements_short|fr:Tous les champs sont obligatoires.",
+      "requirements_short": "All fields are mandatory.",
       "post_code": "The postcode allows us to analyse the results by geographical area."
     },
     "social_login": {
@@ -319,7 +319,7 @@
       "tooltip_description": "Your solution will be processed by our teams within 48 hours, in the meantime you can already find it in your profile.",
       "grats": "Congratulations {{name}}, ",
       "proposal_sent": "your proposal has been submitted ",
-      "activate": "@@proposal_submit.success.activate|fr:Activez votre compte en un click",
+      "activate": "Confirm your email address in one click",
       "link": "Confirm your email address in one click to ensure the authenticity of your account. Click on the activation link that you received at : {{mail}}",
       "question": "Do you have a question? Please contact us at : "
     },
@@ -344,7 +344,7 @@
       "back_authentication": "Go back to the login screen",
       "last_step_red": "Only one step left ",
       "last_step": "to send your solution !",
-      "back": "@@proposal_submit.authentication.back|fr:Retour",
+      "back": "Back",
       "button_login": "@@proposal_submit.authentication.button_login|fr:Se connecter"
     }
   },
