--- a/apps/widget/i18n/fr.json
+++ b/apps/widget/i18n/fr.json
@@ -400,8 +400,8 @@
       "tooltip_description": "Votre proposition sera traitée par nos équipes sous 48h, en attendant vous pouvez la retrouver dès maintenant dans votre profil.",
       "grats": "Félicitations {{name}}, ",
       "proposal_sent": "votre proposition a été envoyée ",
-      "activate": "Activez votre compte en un clic",
-      "link": "Confirmer votre adresse e-mail en un clic pour garantir l’authenticité de votre compte. Cliquez sur le lien d’activation qui vous a été envoyé à : {{mail}}",
+      "activate": "Confirmer votre adresse e-mail en un clic",
+      "link": "pour garantir l’authenticité de votre compte. Cliquez sur le lien d’activation qui vous a été envoyé à : {{mail}}",
       "question": "Une question ? Vous pouvez nous contacter à : "
     }
   },
