--- a/apps/front/i18n/en.json
+++ b/apps/front/i18n/en.json
@@ -355,7 +355,7 @@
       "back": "Back",
       "last_step_red": "Only one step left ",
       "last_step": "to send your solution !",
-      "button_login": "@@proposal_submit.authentication.button_login|fr:Se connecter"
+      "button_login": "Sign up with"
     }
   },
   "vote": {
@@ -428,7 +428,7 @@
     "registration_title": "I don’t have an account,",
     "registration_link": "let's create one.",
     "email_doesnot_exist": "Invalid login or password.",
-    "connect": "@@login.connect|fr:Se connecter",
+    "connect": "Sign up with",
     "forgot_password": "@@login.forgot_password|fr:Mot de passe oublié ?"
   },
   "register": {
