--- a/apps/widget/i18n/de.json
+++ b/apps/widget/i18n/de.json
@@ -380,7 +380,7 @@
       "back_authentication": "Zurück zum Anmeldebildschirm",
       "back": "Zurück",
       "subtitle": "@@proposal_submit.authentication.subtitle|fr:Je m'inscris avec",
-      "button_login": "@@proposal_submit.authentication.button_login|fr:Se connecter",
+      "button_login": "Ich verbinde mich mit",
       "last_step_red": "Es bleibt nur noch ein Schritt ",
       "last_step": "um deinen Vorschlag einzureichen !"
     },
@@ -472,7 +472,7 @@
     "registration_title": "Ich habe kein Konto",
     "registration_link": "und erstelle eins für mich.",
     "email_doesnot_exist": "Deine {{emailLabel}} oder dein {{passwordLabel}} ist falsch.",
-    "connect": "@@login.connect|fr:Se connecter",
+    "connect": "Ich verbinde mich mit",
     "forgot_password": "@@login.forgot_password|fr:Mot de passe oublié ?"
   },
   "register": {
