fix(widget): translation and proposal width

--- a/apps/widget/i18n/de.json
+++ b/apps/widget/i18n/de.json
@@ -393,7 +393,7 @@
       "grats": "Herzlichen Glückwunsch {{name}}, ",
       "proposal_sent": "dein Vorschlag wurde abgeschickt ",
       "activate": "Bestätige deine E-Mail-Adresse mit einem Klick ",
-      "link": "Bestätige deine E-Mail-Adresse mit einem Klick, um die Gültigkeit deines Kontos zu gewährleisten. Klicke auf den Aktivierungslink, der dir an diese Adresse geschickt wurde : {{mail}}. ",
+      "link": ", um die Gültigkeit deines Kontos zu gewährleisten. Klicke auf den Aktivierungslink, der dir an diese Adresse geschickt wurde : {{mail}}. ",
       "question": "Du hast noch Fragen? Kontaktiere uns unter : "
     }
   },
