--- a/apps/widget/i18n/en.json
+++ b/apps/widget/i18n/en.json
@@ -602,7 +602,7 @@
     },
     "newsletter_update": {
       "title": "Manage my preferences",
-      "optin_label": "I am opposed to receiving marketing e-mails to inform me of projects conducted by Make.org"
+      "optin_label": "I agree to receive emails from Make.org to be updated on current and future consultations."
     },
     "delete_account": {
       "title": "Delete my account",
@@ -1143,7 +1143,7 @@
     "privacy_policy": "privacy policy",
     "make_protect": "Make.org is committed to protecting your ",
     "make_protect_link": "personal data.",
-    "opt_out": "I am opposed to receiving marketing e-mails to inform me of projects conducted by Make.org."
+    "opt_in": "I agree to receive emails from Make.org to be updated on current and future consultations."
   },
   "browse": {
     "page_title": "Browse consultations",
